# fbs

./: .gitignore  CHANGELOG.md  CHANGELOG_v3.1.0.md  COMPREHENSIVE_CODEBASE_REVIEW.md  COMPREHENSIVE_SECURITY_AND_IMPLEMENTATION_REVIEW.md  COMPREHENSIVE_TESTING_IMPLEMENTATION.md  CORE_BIZ_INTELLIGENCE_VERIFICATION.md  DATABASE_ARCHITECTURE.md  DATABASE_STORAGE_ANALYSIS.md  DEPLOYMENT_GUIDE.md  DEVELOPER_GUIDE.md  DJANGO_FBS_IMPLEMENTATION_GUIDE.md  DMS_IMPLEMENTATION_SUMMARY.md  FBS_COMPREHENSIVE_TESTING_README.md  FBS_CRITICAL_FIXES_COMPLETED.md  FBS_CRITICAL_FIXES_README.md  FBS_EMBEDDABLE_PATTERNS_AUDIT.md  FBS_FASTAPI_IMPLEMENTATION_SUMMARY.md  FBS_INCREMENTAL_MODULE_SYSTEM.md  FBS_INTEGRATION_ISSUES_COMMUNIQUE.md  FBS_REQUIREMENTS_COMPLIANCE_REPORT.md  FBS_TEAM_RESPONSE_TO_COMMUNIQUE.md  FBS_v2.0.2_RELEASE_SUMMARY.md  FBS_v2.0.3_RELEASE_NOTES.md  FBS_v2.0.5_RELEASE_NOTES.md  FBS_v2.0.6_HOTFIX_EXTENSION.md  FBS_v2.0.6_RELEASE_NOTES.md  FINAL_COMPREHENSIVE_MIGRATION_VERIFICATION.md  FINAL_SUMMARY.md  INSTALL.md  ISOLATION_ARCHITECTURE_IMPLEMENTATION.md  LICENSE_MANAGER_IMPROVEMENTS.md  MANIFEST.in  MIGRATION_GUIDE.md  MIGRATION_GUIDE_v2_to_v3.md  MODULAR_ARCHITECTURE.md  Makefile  PROJECT_STRUCTURE.md  README.md  RELEASE_2.0.1.md  (+42 more)
.github/workflows/: test.yml
docker/: Dockerfile.git  docker-compose.git.yml  env.git.example
docs/: API_DOCUMENTATION_REVIEW.md  API_REFERENCE.md  COMPREHENSIVE_INTEGRATION_GUIDE.md  CURSOR_DEVELOPER_GUIDE.md  DEVELOPER_GUIDE.md  DEVELOPER_QUICK_REFERENCE.md  DMS_INTEGRATION.md  DOCKER_INTEGRATION_EXAMPLE.py  EMBEDDING_GUIDE.md  FBS_APP_INTEGRATION.md  FBS_ARCHITECTURE_COMPARISON.md  FBS_FASTAPI_EMBEDDABLE_GUIDE.md  FBS_IMPLEMENTATION_EXAMPLE.py  FBS_IMPLEMENTATION_REQUIREMENTS.md  FBS_MAXIMIZE_USAGE_GUIDE.md  FBS_TEAM_REQUIREMENTS.md  GIT_INSTALLATION.md  INSTALLATION.md  INSTALLATION_GUIDE.md  INTEGRATION.md  LICENSE_MANAGER_INTEGRATION.md  LICENSING.md  ODOO_INTEGRATION.md  ODOO_INTEGRATION_GUIDE.md  QUICK_START_GIT.md  README.md  README_EMBEDDABLE.md  SECURITY.md  TESTING_GUIDE.md  TEST_COVERAGE_SUMMARY.md  USAGE_EXAMPLES.md
docs/EXAMPLES/: README.md  basic_integration.py
docs/api/: 01_overview.md  02_core_operations.md  03_discovery_profiling.md  04_authentication.md  05_business_endpoints.md  06_business_intelligence.md  07_error_handling.md  08_webhooks_integrations.md
docs/bugs_report/: bugs_01.md
docs/dms/: specs.md
docs/reported bugs/: FBS_INTEGRATION_STATUS_SUMMARY.md  FBS_ODOO_BUG_REPORT.md  bug_01.md
fbs/: .env.example  __init__.py  requirements.txt  requirements_rental.json  settings.py  urls.py  wsgi.py
fbs/fayvad_core/: __init__.py  admin.py  apps.py  asgi.py  authentication.py  middleware.py  models.py  settings.py  urls.py  wsgi.py
fbs_app/: __init__.py  admin.py  admin_urls.py  apps.py  auth_views.py  config_template.py  context_processors.py  dashboard_urls.py  health_views.py  interfaces.py  routers.py  signals.py  urls.py  version.py
fbs_app/management/: __init__.py
fbs_app/middleware/: __init__.py  database_routing.py  request_logging.py
fbs_app/migrations/: 0001_initial.py  0002_msme_models.py  0003_workflow_models.py  0004_bi_models.py  0005_compliance_models.py  0006_accounting_models.py  0007_discovery_models.py  __init__.py
fbs_app/models/: __init__.py  accounting.py  bi.py  compliance.py  core.py  discovery.py  msme.py  workflows.py
fbs_app/services/: __init__.py  auth_service.py  bi_service.py  business_logic_service.py  cache_service.py  compliance_service.py  database_service.py  discovery_service.py  field_merger_service.py  incremental_module_service.py  msme_accounting_service.py  msme_analytics_service.py  msme_business_service.py  msme_compliance_service.py  msme_service.py  msme_service_manager.py  msme_workflow_service.py  notification_service.py  odoo_client.py  onboarding_service.py  service_generator.py  simple_accounting_service.py  workflow_service.py
fbs_app/tests/: __init__.py  conftest.py  run_all_tests.py  test_interfaces.py  test_models.py
fbs_django/: create_service_stubs.py
fbs_django/config/: asgi.py  settings.py  urls.py
fbs_dms/: README.md  __init__.py  admin.py  apps.py  requirements.txt  setup.py  urls.py
fbs_dms/migrations/: 0001_initial.py
fbs_dms/models/: __init__.py  document.py  file_attachment.py  workflow.py
fbs_dms/services/: __init__.py  document_service.py  file_service.py  odoo_dms_service.py  search_service.py  workflow_service.py
fbs_dms/tests/: __init__.py  test_dms_comprehensive.py  test_fbs_integration.py  test_models.py  test_odoo_integration.py
fbs_dms/views/: __init__.py  document_views.py  file_views.py  search_views.py  workflow_views.py
fbs_fastapi/: DEVELOPER_GUIDE.md  Dockerfile  README.md  TEST_REPORT_V3.0.0.md  __init__.py  alembic_dms_migration.py  alembic_license_migration.py  alembic_migration.py  env.example  main.py  pytest.ini  requirements.txt
fbs_fastapi/commands/: install_solution.py
fbs_fastapi/core/: __init__.py  config.py  database.py  dependencies.py  middleware.py
fbs_fastapi/models/: __init__.py  dms_models.py  license_models.py  models.py
fbs_fastapi/routers/: business.py  dms.py  license.py  module_gen.py
fbs_fastapi/services/: __init__.py  accounting_service.py  auth_service.py  bi_service.py  business_service.py  cache_service.py  compliance_service.py  database_service.py  discovery_service.py  dms_service.py  field_merger_service.py  license_manager.py  license_service.py  module_generation_service.py  msme_service.py  notification_service.py  odoo_service.py  onboarding_service.py  (+3 more)
fbs_license_manager/: README.md  __init__.py  admin.py  apps.py  models.py  models_reference.py  requirements.txt  services.py  setup.py
fbs_project/: __init__.py  manage.py  settings.py  urls.py  wsgi.py
nginx/: nginx.conf
scripts/: install-from-git.bat  install-from-git.sh  setup_databases.py
tests/: run_comprehensive_tests.py  test_basic_functionality.py  test_cherry_picking_and_integration.py  test_fbs_app_comprehensive.py  test_fbs_app_models.py  test_license_manager_comprehensive.py
(+132 files in other folders)
